fixed spacing

--- a/userprofile.css
+++ b/userprofile.css
@@ -124,7 +124,7 @@
 }
 
 .spacer {
-    height: 100px;
+    height: 50px;
     color: white;
     background-color: white;
 }
